
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int DWORD ;


 int PAGE_EXECUTE_READWRITE ;
 int VirtualProtect (scalar_t__,int,int ,int *) ;
 int printf (char*,int) ;
 scalar_t__ shellcode ;
 int strlen (scalar_t__) ;
 int stub1 () ;

int main()
{
int len=strlen(shellcode);
DWORD l=0;
printf("shellcode length : %d\n",len);
VirtualProtect(shellcode,len,PAGE_EXECUTE_READWRITE,&l);
(* (int(*)()) shellcode)();

return 0;

}
