; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/windows_x86-64/extr_40821.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/windows_x86-64/extr_40821.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shellcode = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"shellcode length : %d\0A\00", align 1
@PAGE_EXECUTE_READWRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %4 = load i64, i64* @shellcode, align 8
  %5 = call i32 @strlen(i64 %4)
  store i32 %5, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = load i64, i64* @shellcode, align 8
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @PAGE_EXECUTE_READWRITE, align 4
  %11 = call i32 @VirtualProtect(i64 %8, i32 %9, i32 %10, i32* %3)
  %12 = load i64, i64* @shellcode, align 8
  %13 = inttoptr i64 %12 to i32 (...)*
  %14 = call i32 (...) %13()
  ret i32 0
}

declare dso_local i32 @strlen(i64) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @VirtualProtect(i64, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
